--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,23 @@
     <string name="app_name">Lab2</string>
 
 
-        <string-array name="priority_dropdown_values">
-            <item>High</item>
-            <item>Medium</item>
-            <item>Low</item>
-        </string-array>
+    <string name="priority" translatable="false">Priority</string>
+    <string name="enter_school_id_include_m" translatable="false">Enter School Id (include M)</string>
+    <string name="m123456" translatable="false">M123456</string>
+    <string name="macos">MacOS</string>
+    <string name="windows">Windows</string>
+    <string name="device_number_6_digit">Device Number - 6 Digit</string>
+    <string name="check_inputs">Check Inputs</string>
+    <string name="submit">Submit</string>
+    <string name="_123456">123456</string>
+
+    <string-array name="priority_values">
+        <item>High</item>
+        <item>Medium</item>
+        <item>Low</item>
+    </string-array>
+
+
 
 
 
